Fix nav overflow on mobile

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,6 @@
 nav {
   position: relative;
-  margin: auto;
+  margin: auto 1em;
   padding-top: 1em;
   background-color: $dark-bg;
   color: $light-text;
@@ -9,7 +9,7 @@ nav {
   height: 60px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   z-index: 1;
 }
 
@@ -55,15 +55,7 @@ nav {
   .nav-links {
     opacity: 1;
     transform: translateX(0);
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
     margin: 0;
-  }
-
-  nav .container {
-    margin: 0 -4%;;
   }
 }
 
